[package]
description = "Durian"
name = "durian"
version = "0.1.0"
authors = ["Mostafa Sedaghat Joo <mostafa.sedaghat@gmail.com>"]

[dependencies]
byteorder = "1.0"
primitive-types = "0.7.2"
log = "0.4"
wasmi = "0.6.2"
pwasm-utils = "0.12.0"
parity-wasm = "0.41.0"
snafu = "0.6.3"
keccak-hash = "0.5.1"

[lib]
path = "src/lib.rs"
