[package]
name = "durian-client"
version = "0.1.0"
authors = ["Mostafa <mostafa.sedaghat@gmail.com>"]
edition = "2018"

build = "src/build.rs"

[[bin]]
name = "durian-client"
path = "src/main.rs"

[build-dependencies]
capnpc = { git = "https://github.com/capnproto/capnproto-rust" }

[dependencies]
capnp =  { git = "https://github.com/capnproto/capnproto-rust" }
capnp-rpc = { git = "https://github.com/capnproto/capnproto-rust" }
futures = "0.3.0"
blockchain = { path = "../blockchain" }
lazy_static = "1.4.0"
durian = { path = "../../durian" }
primitive-types = "0.7.2"
log = "0.4"
async-std = "1.5.0"